# interactive_summary_extraction

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  run_compare.sh
docs/: pipeline_v4_diagram.md  (+1 more)
pipeline/: .env.example  IMPLEMENTATION.md  compare.js  compare.py  config.py  index.js  main.py  package-lock.json  package.json  prefilter.js  prefilter.py  pyproject.toml  setup_claude.sh  setup_runpod.sh  synthesizer.js  synthesizer.py
pipeline/pipeline_v1/: IMPLEMENTATION.md  compare.py  config.py  prefilter.py  synthesizer.py
pipeline/pipeline_v1/tests/: test_compare.py  test_integration.py
pipeline/pipeline_v2/: config.py  error_log.md  json_parser.py  llm_client.py  main.py  pipeline_run_observations.md  progress_log.py  pyproject.toml  server.py  stage1_discovery.py  stage1_ordering.py  stage2_map.py  stage3_reduce.py  stage4_output.py
pipeline/pipeline_v2/docs/: 2026-03-11-pipeline-v2-design.md  2026-03-11-pipeline-v6-design.md  2026-03-11-pipeline-v6-plan.md  prompt-flow.md
pipeline/pipeline_v2/docs/plans/: 2026-03-12-robust-chunking-and-error-resilience.md  2026-03-13-parallel-map-design.md  2026-03-13-parallel-map.md
pipeline/pipeline_v2/tests/: test_config.py  test_integration.py  test_json_parser.py  test_llm_client.py  test_main.py  test_server.py  test_stage1_discovery.py  test_stage1_ordering.py  test_stage2_map.py  test_stage3_reduce.py  test_stage4_output.py
pipeline/test/: prefilter.test.js  synthesizer.test.js
pipeline/tests/: test_compare.py  test_integration.py  test_prefilter.py  test_synthesizer.py
(+174 files in other folders)
