[project]
name = "summary-extraction-pipeline-v2"
version = "0.1.0"
description = "Map-reduce summary extractor for educational content"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "charset-normalizer>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
